[metadata]
name = ptero_common
version = 0.4.0
summary = Common code for Ptero services

[files]
packages =
    ptero_common
scripts =
    scripts/teardown_devserver
    scripts/wait_for_service

[global]
setup-hooks =
    pbr.hooks.setup_hook


[entry_points]
console_scripts =
    devserver = ptero_common.devserver:main
